--- a/couphone/app/src/main/res/layout/activity_login.xml
+++ b/couphone/app/src/main/res/layout/activity_login.xml
@@ -7,14 +7,14 @@
     android:layout_height="match_parent"
     android:background="#CCF9F1EC"
     android:padding="16dp"
-    android:fontFamily="@font/lineseedkr_rg"
+    android:fontFamily="@font/line_seed_sans_bold"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/main_logo_iv"
         android:layout_width="132dp"
         android:layout_height="133dp"
-        android:layout_marginTop="129dp"
+        android:layout_marginTop="120dp"
         android:src="@drawable/main_logo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         app:layout_constraintBottom_toTopOf="@id/phone_number_et"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="20dp"/>
 
 
     <EditText
@@ -41,6 +41,7 @@
         android:background="@drawable/rounded_edittext"
         android:padding="16dp"
         android:hint="휴대폰 번호"
+        android:fontFamily="@font/line_seed_sans_bold"
         app:layout_constraintTop_toBottomOf="@id/couphone_logo_iv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +56,8 @@
         android:background="@drawable/rounded_edittext"
         android:padding="16dp"
         android:hint="패스워드"
-        android:layout_marginTop="20dp"
+        android:fontFamily="@font/line_seed_sans_bold"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/phone_number_et"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -65,6 +67,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="로그인 상태 유지"
+        android:fontFamily="@font/line_seed_sans_bold"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/password_et"
         app:layout_constraintStart_toStartOf="@id/password_et" />
 
@@ -74,7 +78,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="로그인"
+        android:fontFamily="@font/line_seed_sans_bold"
+        android:background="@drawable/rounded_edittext"
         android:backgroundTint="#2D5E62"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/remember_login_cb" />
@@ -84,6 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호 재설정"
+        android:fontFamily="@font/line_seed_sans_bold"
         android:textColor="@color/black"
         android:gravity="start|center_vertical"
         android:background="@android:color/transparent"
@@ -95,8 +103,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="회원가입"
+        android:fontFamily="@font/line_seed_sans_bold"
         android:textColor="@color/black"
-        android:gravity="start|center_vertical"
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="@id/buttonLogin"
         app:layout_constraintTop_toBottomOf="@id/buttonLogin" />
