--- a/couphone/app/src/main/res/values/colors.xml
+++ b/couphone/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green">#2D5E62</color>
+    <color name="gray">#D9D9D9</color>
+    <color name="deep_gray">#8C8C8C</color>
+    <color name="background">#F9F1EC</color>
 </resources>
