design 로고, 화면 배경 색, 제목 폰트

--- a/couphone/app/src/main/res/layout/activity_login.xml
+++ b/couphone/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:background="#CCF9F1EC"
     android:padding="16dp"
     android:fontFamily="@font/line_seed_sans_bold"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <ImageView
         android:id="@+id/main_logo_iv"
