--- a/couphone/app/src/main/res/layout/activity_password_reset.xml
+++ b/couphone/app/src/main/res/layout/activity_password_reset.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#F9F1EC"
+    android:background="#FFEECD"
     tools:context=".RegisterActivity">
 
     <ImageView
         android:id="@+id/register_upperbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/iphone_status_bar_upper"
+        android:src="@drawable/iphone_status_bar_upper_new"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -19,20 +19,24 @@
         android:id="@+id/register_logo"
         android:layout_width="99.61dp"
         android:layout_height="100.21dp"
-        android:src="@drawable/logo"
+        android:src="@drawable/logo_new"
         android:layout_marginHorizontal="155dp"
         android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="@+id/register_upperbar"
         app:layout_constraintTop_toBottomOf="@+id/register_upperbar"/>
 
-
-    <ImageView
+    <TextView
         android:id="@+id/register_title"
-        android:layout_width="match_parent"
+        android:layout_width="180dp"
         android:layout_height="41dp"
-        android:src="@drawable/couphone"
+        android:layout_marginHorizontal="120dp"
+        android:text="couphone"
+        android:textSize="38sp"
+        android:textColor="@color/green"
+        android:fontFamily="@font/tway_fly"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/register_logo"/>
+
 
     <TextView
         android:id="@+id/text_username"
@@ -44,7 +48,7 @@
         android:fontFamily="@font/line_seed_sans_bold"
         android:layout_marginLeft="65dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="@id/register_title"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/register_title"/>
 
     <LinearLayout
@@ -77,9 +81,8 @@
         android:textColor="@color/black"
         android:textSize="12sp"
         android:fontFamily="@font/line_seed_sans_bold"
-        android:layout_marginLeft="65dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="@id/register_title"
+        app:layout_constraintStart_toStartOf="@id/text_username"
         app:layout_constraintTop_toBottomOf="@id/register_text1"/>
 
 
@@ -129,9 +132,8 @@
         android:textColor="@color/black"
         android:textSize="12sp"
         android:fontFamily="@font/line_seed_sans_bold"
-        android:layout_marginLeft="65dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="@id/register_title"
+        app:layout_constraintStart_toStartOf="@id/text_phonenumber"
         app:layout_constraintTop_toBottomOf="@id/register_text2"/>
 
     <LinearLayout
@@ -164,9 +166,8 @@
         android:textColor="@color/black"
         android:textSize="12sp"
         android:fontFamily="@font/line_seed_sans_bold"
-        android:layout_marginLeft="65dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="@id/register_title"
+        app:layout_constraintStart_toStartOf="@id/text_verification_code"
         app:layout_constraintTop_toBottomOf="@id/register_text3"/>
 
     <LinearLayout
@@ -209,9 +210,8 @@
         android:textColor="@color/black"
         android:textSize="12sp"
         android:fontFamily="@font/line_seed_sans_bold"
-        android:layout_marginLeft="65dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="@id/register_title"
+        app:layout_constraintStart_toStartOf="@id/text_password"
         app:layout_constraintTop_toBottomOf="@id/register_text4"/>
 
     <LinearLayout
