--- a/couphone/app/src/main/res/layout/activity_login.xml
+++ b/couphone/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CCF9F1EC"
+    android:background="#FFEECD"
     android:padding="16dp"
     android:fontFamily="@font/line_seed_sans_bold"
     tools:context=".LoginActivity">
@@ -15,13 +15,26 @@
         android:layout_width="132dp"
         android:layout_height="133dp"
         android:layout_marginTop="120dp"
-        android:src="@drawable/main_logo"
+        android:src="@drawable/logo_new"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/couphone_logo_iv"/>
+        app:layout_constraintBottom_toTopOf="@id/login_title"/>
 
-    <ImageView
+    <TextView
+        android:id="@+id/login_title"
+        android:layout_width="244dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="120dp"
+        android:text="couphone"
+        android:textSize="53sp"
+        android:textColor="@color/green"
+        android:fontFamily="@font/tway_fly"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/main_logo_iv"/>
+
+    <!--<ImageView
         android:id="@+id/couphone_logo_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,7 +43,7 @@
         app:layout_constraintBottom_toTopOf="@id/phone_number_et"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"/>-->
 
 
     <EditText
@@ -42,7 +55,7 @@
         android:padding="16dp"
         android:hint="휴대폰 번호"
         android:fontFamily="@font/line_seed_sans_bold"
-        app:layout_constraintTop_toBottomOf="@id/couphone_logo_iv"
+        app:layout_constraintTop_toBottomOf="@id/login_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/password_et"
