--- a/couphone/app/src/main/res/values/themes.xml
+++ b/couphone/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Couphone" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.Couphone1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="Theme.YoutubeLayout" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.YoutubeLayout" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#0F9D58</item>
         <item name="colorPrimaryVariant">#0F9D58</item>
         <item name="colorOnPrimary">#000000</item>
