--- a/couphone/app/src/main/res/layout/activity_login.xml
+++ b/couphone/app/src/main/res/layout/activity_login.xml
@@ -7,43 +7,32 @@
     android:layout_height="match_parent"
     android:background="#FFEECD"
     android:padding="16dp"
-    android:fontFamily="@font/line_seed_sans_bold"
-    tools:context=".LoginActivity">
+    android:fontFamily="@font/lineseedkr_rg"
+    tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/main_logo_iv"
-        android:layout_width="132dp"
-        android:layout_height="133dp"
-        android:layout_marginTop="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="500dp"
         android:src="@drawable/logo_new"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/couphone_logo_tv"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/login_title"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/login_title"
-        android:layout_width="244dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="120dp"
-        android:text="couphone"
-        android:textSize="53sp"
-        android:textColor="@color/green"
-        android:fontFamily="@font/tway_fly"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_logo_iv"/>
-
-    <!--<ImageView
-        android:id="@+id/couphone_logo_iv"
+        android:id="@+id/couphone_logo_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/couphone_logo"
+        android:text="couphone"
         app:layout_constraintTop_toBottomOf="@id/main_logo_iv"
-        app:layout_constraintBottom_toTopOf="@id/phone_number_et"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"/>-->
+        android:fontFamily="@font/tway_fly"
+        android:textColor="@color/green"
+        android:textSize="50sp"
+        />
 
 
     <EditText
@@ -55,7 +44,7 @@
         android:padding="16dp"
         android:hint="휴대폰 번호"
         android:fontFamily="@font/line_seed_sans_bold"
-        app:layout_constraintTop_toBottomOf="@id/login_title"
+        app:layout_constraintTop_toBottomOf="@id/couphone_logo_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/password_et"
@@ -70,7 +59,7 @@
         android:padding="16dp"
         android:hint="패스워드"
         android:fontFamily="@font/line_seed_sans_bold"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/phone_number_et"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -81,7 +70,6 @@
         android:layout_height="wrap_content"
         android:text="로그인 상태 유지"
         android:fontFamily="@font/line_seed_sans_bold"
-        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/password_et"
         app:layout_constraintStart_toStartOf="@id/password_et" />
 
@@ -92,9 +80,9 @@
         android:layout_marginTop="16dp"
         android:text="로그인"
         android:fontFamily="@font/line_seed_sans_bold"
-        android:background="@drawable/rounded_edittext"
-        android:backgroundTint="#2D5E62"
+        android:background="@drawable/register_button"
         android:textColor="@color/white"
+        android:backgroundTint="#2D5E62"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/remember_login_cb" />
@@ -103,7 +91,7 @@
         android:id="@+id/button_ForgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="비밀번호를 잊으셨나요?"
+        android:text="비밀번호 재설정"
         android:fontFamily="@font/line_seed_sans_bold"
         android:textColor="@color/black"
         android:gravity="start|center_vertical"
@@ -118,6 +106,7 @@
         android:text="회원가입"
         android:fontFamily="@font/line_seed_sans_bold"
         android:textColor="@color/black"
+        android:gravity="start|center_vertical"
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="@id/buttonLogin"
         app:layout_constraintTop_toBottomOf="@id/buttonLogin" />
