activity_password_reset.xml 오류수정

--- a/couphone/app/src/main/res/layout/activity_password_reset.xml
+++ b/couphone/app/src/main/res/layout/activity_password_reset.xml
@@ -181,8 +181,7 @@
             android:inputType="textPassword"
             android:padding="16dp"
             android:drawableEnd="@drawable/lock_square"
-            android:drawablePadding="8dp"
-            android:transformationMethod="password" />
+            android:drawablePadding="8dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -218,8 +217,7 @@
             android:inputType="textPassword"
             android:padding="16dp"
             android:drawableEnd="@drawable/lock_square"
-            android:drawablePadding="8dp"
-            android:transformationMethod="password" />
+            android:drawablePadding="8dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
