--- a/couphone/app/src/main/res/layout/activity_login.xml
+++ b/couphone/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:id="@+id/main_logo_iv"
         android:layout_width="132dp"
         android:layout_height="133dp"
-        android:layout_marginTop="129dp"
+        android:layout_marginTop="90dp"
         android:src="@drawable/main_logo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,58 +23,72 @@
 
     <ImageView
         android:id="@+id/couphone_logo_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="244dp"
+        android:layout_height="55dp"
         android:src="@drawable/couphone_logo"
         app:layout_constraintTop_toBottomOf="@id/main_logo_iv"
         app:layout_constraintBottom_toTopOf="@id/phone_number_et"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="15dp"/>
 
 
     <EditText
         android:id="@+id/phone_number_et"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="278dp"
+        android:layout_height="45dp"
         android:inputType="phone"
         android:background="@drawable/rounded_edittext"
-        android:padding="16dp"
-        android:hint="휴대폰 번호"
+        android:padding="13dp"
+        android:hint="  휴대폰 번호"
+        android:fontFamily="@font/lineseedkr_bd"
+        android:textColor="#BCBCBC"
+        android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/couphone_logo_iv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/password_et"
-        android:layout_marginTop="25dp"/>
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:id="@+id/password_et"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="278dp"
+        android:layout_height="45dp"
         android:inputType="textPassword"
         android:background="@drawable/rounded_edittext"
-        android:padding="16dp"
-        android:hint="패스워드"
-        android:layout_marginTop="20dp"
+        android:padding="13dp"
+        android:hint="  패스워드"
+        android:fontFamily="@font/lineseedkr_bd"
+        android:textColor="#BCBCBC"
+        android:textSize="14sp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/phone_number_et"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
     <CheckBox
         android:id="@+id/remember_login_cb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="로그인 상태 유지"
+        android:fontFamily="@font/lineseedkr_bd"
+        android:textColor="#393939"
+        android:textSize="14sp"
+        android:layout_marginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/password_et"
         app:layout_constraintStart_toStartOf="@id/password_et" />
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_width="278dp"
+        android:layout_height="46dp"
         android:layout_marginTop="16dp"
         android:text="로그인"
-        android:backgroundTint="#2D5E62"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:fontFamily="@font/lineseedkr_bd"
+        android:background="@drawable/rectangle_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/remember_login_cb" />
@@ -84,9 +98,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="비밀번호 재설정"
-        android:textColor="@color/black"
+        android:fontFamily="@font/lineseedkr_bd"
+        android:textColor="#686868"
+        android:textSize="12sp"
         android:gravity="start|center_vertical"
         android:background="@android:color/transparent"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="7dp"
         app:layout_constraintStart_toStartOf="@id/buttonLogin"
         app:layout_constraintTop_toBottomOf="@id/buttonLogin" />
 
@@ -95,8 +113,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="회원가입"
-        android:textColor="@color/black"
-        android:gravity="start|center_vertical"
+        android:fontFamily="@font/lineseedkr_bd"
+        android:textColor="#686868"
+        android:textSize="12sp"
+        android:gravity="right|center_vertical"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="7dp"
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="@id/buttonLogin"
         app:layout_constraintTop_toBottomOf="@id/buttonLogin" />
