feat : 카테고리 화면

--- a/couphone/app/src/main/res/values/themes.xml
+++ b/couphone/app/src/main/res/values/themes.xml
@@ -21,4 +21,8 @@
     <style name="FloatingActionButtonStyle">
         <item name="cornerSize">20dp</item>
     </style>
+    <style name="tabTextStyle" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
