--- a/couphone/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/couphone/app/src/main/res/menu/bottom_nav_menu.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/setting_logo"
         android:title="설정" />
 
 </menu>
