--- a/couphone/app/src/main/res/layout/activity_main.xml
+++ b/couphone/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/main_frm"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="55dp"
         />
 
     <com.google.android.material.bottomappbar.BottomAppBar
