feat : 카테고리별 화면 연결

--- a/couphone/app/src/main/res/layout/fragment_category.xml
+++ b/couphone/app/src/main/res/layout/fragment_category.xml
@@ -32,7 +32,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:fontFamily="@font/tway_fly"
-        android:text="'키즈카페' "
+        android:text="'카페' "
         android:textColor="#2D5E62"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@id/background_first_iv"
@@ -77,6 +77,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_top_tv"
         app:tabBackground="@drawable/tab_background"
+        app:tabMode="scrollable"
         app:tabGravity="center"
         app:tabIndicatorHeight="0dp"
         app:tabSelectedTextColor="@color/white"
