add activity splash.xml, fragment_settings.xml, 아이콘들 수정

--- a/couphone/app/src/main/res/drawable/left_arrow.xml
+++ b/couphone/app/src/main/res/drawable/left_arrow.xml
@@ -1,9 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="8dp"
+    android:width="15dp"
     android:height="14dp"
-    android:viewportWidth="8"
+    android:viewportWidth="15"
     android:viewportHeight="14">
   <path
       android:pathData="M0.396,7.932C0.135,7.677 -0,7.334 -0,7C-0,6.666 0.135,6.323 0.396,6.077L6.216,0.346C6.693,-0.125 7.331,-0.115 7.727,0.376C8.132,0.866 8.078,1.573 7.619,2.024L2.582,7L7.619,11.986C8.078,12.437 8.132,13.134 7.727,13.625C7.331,14.115 6.693,14.125 6.216,13.654L0.396,7.932Z"
+      android:fillColor="#2D5E62"/>
+  <path
+      android:pathData="M7.396,7.932C7.135,7.677 7,7.334 7,7C7,6.666 7.135,6.323 7.396,6.077L13.216,0.346C13.693,-0.125 14.332,-0.115 14.727,0.376C15.132,0.866 15.078,1.573 14.619,2.024L9.582,7L14.619,11.986C15.078,12.437 15.132,13.134 14.727,13.625C14.332,14.115 13.693,14.125 13.216,13.654L7.396,7.932Z"
       android:fillColor="#2D5E62"/>
 </vector>
