--- a/couphone/app/src/main/res/layout/activity_password_reset.xml
+++ b/couphone/app/src/main/res/layout/activity_password_reset.xml
@@ -10,20 +10,19 @@
 
     <ImageView
         android:id="@+id/register_logo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/logo_new"
-        android:layout_marginHorizontal="155dp"
-        android:layout_marginBottom="630dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/main_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed"
+        android:layout_marginTop="60dp"/>
 
     <TextView
         android:id="@+id/register_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginEnd="35dp"
         android:text="couphone"
         android:textSize="38sp"
         android:textColor="@color/green"
@@ -40,9 +39,8 @@
         android:textColor="@color/black"
         android:textSize="12sp"
         android:fontFamily="@font/line_seed_sans_bold"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginStart="40dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/register_title" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -61,7 +59,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_edittext"
             android:fontFamily="@font/line_seed_sans_bold"
-            android:inputType="textPersonName"
+            android:inputType="text"
             android:padding="16dp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -101,12 +99,12 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/register_button1"
+        android:id="@+id/register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
-        android:background="@drawable/verification_button"
+        android:background="@drawable/verification_button_green"
         android:backgroundTint="@null"
         android:fontFamily="@font/line_seed_sans_bold"
         android:text="인증번호 받기"
