--- a/couphone/app/src/main/res/drawable/register_button.xml
+++ b/couphone/app/src/main/res/drawable/register_button.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#2D5E62"/>
+            <solid android:color="@color/green"/>
             <corners
                 android:bottomRightRadius="23dp"
                 android:bottomLeftRadius="23dp"
