--- a/couphone/app/src/main/res/layout/fragment_home.xml
+++ b/couphone/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white">
@@ -14,46 +15,58 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
 
-        <ImageView
-            android:id="@+id/logo_iv"
-            android:layout_width="124dp"
-            android:layout_height="28dp"
-            android:src="@drawable/couphone"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"
+        <TextView
+            android:id="@+id/logo_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="couphone"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:fontFamily="@font/tway_fly"
+            android:textColor="@color/green"
+            android:textSize="35sp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="25dp"/>
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/bellbadge"
+            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="@id/logo_tv"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="15dp"/>
 
         <TextView
-            android:id="@+id/search_tv1"
-            android:layout_width="match_parent"
+            android:id="@+id/search_tv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="여러 쿠폰들을"
+            android:text="여러 쿠폰들을\n한번에 검색해보세요"
             android:textSize="21sp"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="40dp"
             android:layout_marginLeft="25dp"
-            android:fontFamily="@font/lineseedkr_bd"
+            android:fontFamily="@font/tway_fly"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/logo_iv"/>
+            app:layout_constraintTop_toBottomOf="@id/logo_tv"
+            app:layout_constraintStart_toStartOf="parent"
+            android:lineSpacingExtra="8dp"/>
 
-        <TextView
-            android:id="@+id/search_tv2"
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/sparkling_iv1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="한번에 검색해보세요"
-            android:textSize="21sp"
-            android:layout_marginTop="8dp"
-            android:layout_marginLeft="25dp"
-            android:fontFamily="@font/lineseedkr_bd"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/search_tv1"/>
+            android:src="@drawable/sparkling"
+            app:layout_constraintStart_toEndOf="@id/search_tv"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="4dp"
+            android:background="@color/white"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="18dp"
@@ -64,9 +77,9 @@
 
         <FrameLayout
             android:id="@+id/latest_fl"
-            android:layout_width="344dp"
+            android:layout_width="match_parent"
             android:layout_height="70dp"
-            android:background="@drawable/search_tab2"
+            android:background="@drawable/search_tab_gray"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
@@ -77,26 +90,25 @@
 
             <ImageView
                 android:id="@+id/latest_iv"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:layout_width="17dp"
+                android:layout_height="17dp"
                 android:layout_marginLeft="12dp"
-                android:layout_marginBottom="13dp"
-                android:src="@drawable/baseline_access_time_24"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/stopwatch"
                 android:layout_gravity="bottom"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
+            <Button
                 android:id="@+id/arrowoutward_btn"
                 android:layout_width="22dp"
                 android:layout_height="22dp"
                 android:layout_gravity="right"
                 android:layout_marginTop="36dp"
                 android:layout_marginLeft="300dp"
-                android:layout_marginRight="8dp"
-                android:src="@drawable/baseline_arrow_outward_24"
-                android:background="@color/white"
+                android:layout_marginRight="12dp"
+                android:background="@drawable/group_1736"
                 app:layout_constraintStart_toEndOf="@id/latest_fl"/>
 
             <EditText
@@ -121,9 +133,9 @@
 
         <FrameLayout
             android:id="@+id/search_fl"
-            android:layout_width="344dp"
+            android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:background="@drawable/search_tab1"
+            android:background="@drawable/search_tab_green"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -133,10 +145,10 @@
 
             <ImageView
                 android:id="@+id/search_iv"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="12dp"
-                android:src="@drawable/baseline_search_24"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginLeft="14dp"
+                android:src="@drawable/magnify_logo"
                 android:layout_gravity="center_vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -144,13 +156,13 @@
 
             <ImageButton
                 android:id="@+id/arrowupward_btn"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:layout_gravity="right"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="8dp"
-                android:src="@drawable/baseline_arrow_upward_24"
-                android:background="@drawable/circle_shape" />
+                android:background="@drawable/search_arrow" />
+
 
             <EditText
                 android:id="@+id/search_et"
@@ -177,25 +189,46 @@
         android:id="@+id/categoryment_cl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintTop_toBottomOf="@id/search_ll">
 
         <TextView
-            android:id="@+id/category_tv1"
-            android:layout_width="match_parent"
+            android:id="@+id/category_tv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="어떤 매장 쿠폰을 찾고 계신가요?"
+            android:text="어떤 매장 쿠폰"
             android:textSize="21sp"
             android:layout_marginLeft="25dp"
-            android:fontFamily="@font/lineseedkr_bd"
+            android:fontFamily="@font/tway_fly"
+            android:textColor="@color/green"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/category_tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="을 찾고 계신가요?"
+            android:textSize="21sp"
+            android:fontFamily="@font/tway_fly"
             android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toEndOf="@id/category_tv"
+            app:layout_constraintTop_toTopOf="parent">
+        </TextView>
+
+        <ImageView
+            android:id="@+id/sparkling_iv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/sparkling"
+            app:layout_constraintStart_toEndOf="@id/category_tv1"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="4dp"/>
 
         <TextView
             android:id="@+id/category_tv2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="카테고리로 분류해서 알려드려요!"
             android:textSize="14sp"
@@ -212,33 +245,37 @@
             android:layout_height="wrap_content"
             android:columnCount="3"
             android:rowCount="4"
-            app:layout_constraintStart_toStartOf="@id/category_tv2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/category_tv2"
             android:layout_marginTop="10dp">
 
             <ImageButton
                 android:id="@+id/entertainment_btn1"
-                android:layout_width="87dp"
-                android:layout_height="87dp"
-                android:background="@drawable/rounded_button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/gray_rectangle"
                 android:layout_marginLeft="9dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp"
+                android:background="@color/white"/>
 
             <ImageButton
                 android:id="@+id/cafe_btn2"
-                android:layout_width="87dp"
-                android:layout_height="87dp"
-                android:background="@drawable/rounded_button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/gray_rectangle"
                 android:layout_marginLeft="27dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp"
+                android:background="@color/white"/>
 
             <ImageButton
                 android:id="@+id/mart_btn3"
-                android:layout_width="87dp"
-                android:layout_height="87dp"
-                android:background="@drawable/rounded_button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/gray_rectangle"
                 android:layout_marginLeft="27dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp"
+                android:background="@color/white"/>
 
             <TextView
                 android:id="@+id/entertainment_tv1"
@@ -272,30 +309,33 @@
 
             <ImageButton
                 android:id="@+id/beauty_btn4"
-                android:layout_width="87dp"
-                android:layout_height="87dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="9dp"
                 android:layout_marginTop="7dp"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/rounded_button2" />
+                android:src="@drawable/gray_rectangle"
+                android:background="@color/white"/>
 
             <ImageButton
                 android:id="@+id/restaurant_btn5"
-                android:layout_width="87dp"
-                android:layout_height="87dp"
-                android:background="@drawable/rounded_button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/gray_rectangle"
                 android:layout_marginTop="7dp"
                 android:layout_marginLeft="27dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp"
+                android:background="@color/white"/>
 
             <ImageButton
                 android:id="@+id/else_btn6"
-                android:layout_width="87dp"
-                android:layout_height="87dp"
-                android:background="@drawable/rounded_button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/gray_rectangle"
                 android:layout_marginTop="7dp"
                 android:layout_marginLeft="27dp"
-                android:layout_marginBottom="5dp"/>
+                android:layout_marginBottom="5dp"
+                android:background="@color/white"/>
 
             <TextView
                 android:id="@+id/beauty_tv4"
