--- a/couphone/app/src/main/res/values/colors.xml
+++ b/couphone/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="gray">#D9D9D9</color>
     <color name="deep_gray">#8C8C8C</color>
     <color name="background">#F9F1EC</color>
+    <color name="textgray">#686868</color>
+    <color name="maincolor">#FFEECD</color>
 </resources>
