--- a/couphone/app/src/main/res/layout/activity_login.xml
+++ b/couphone/app/src/main/res/layout/activity_login.xml
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@id/password_et"
         app:layout_constraintStart_toStartOf="@id/password_et" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogin"
         android:layout_width="278dp"
         android:layout_height="wrap_content"
