--- a/couphone/app/src/main/res/layout/activity_password_reset.xml
+++ b/couphone/app/src/main/res/layout/activity_password_reset.xml
@@ -98,7 +98,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/register_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -219,7 +219,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/register_reset_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
