--- a/couphone/app/src/main/res/layout/activity_password_reset.xml
+++ b/couphone/app/src/main/res/layout/activity_password_reset.xml
@@ -6,7 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFEECD"
-    tools:context=".RegisterActivity">
+    tools:context=".PasswordResetActivity">
 
     <ImageView
         android:id="@+id/register_logo"
@@ -60,7 +60,8 @@
             android:background="@drawable/rounded_edittext"
             android:fontFamily="@font/line_seed_sans_bold"
             android:inputType="text"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:hint="이름을 입력하세요"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -94,7 +95,8 @@
             android:background="@drawable/rounded_edittext"
             android:fontFamily="@font/line_seed_sans_bold"
             android:inputType="phone"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:hint="휴대폰번호를 입력하세요"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -143,7 +145,8 @@
             android:background="@drawable/rounded_edittext"
             android:fontFamily="@font/line_seed_sans_bold"
             android:inputType="text"
-            android:padding="16dp" />
+            android:padding="16dp"
+            android:hint="인증번호를 입력하세요"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -179,7 +182,8 @@
             android:inputType="textPassword"
             android:padding="16dp"
             android:drawableEnd="@drawable/lock_square"
-            android:drawablePadding="8dp" />
+            android:drawablePadding="8dp"
+            android:hint="비밀번호를 입력하세요"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -215,7 +219,8 @@
             android:inputType="textPassword"
             android:padding="16dp"
             android:drawableEnd="@drawable/lock_square"
-            android:drawablePadding="8dp" />
+            android:drawablePadding="8dp"
+            android:hint="비밀번호를 확인하세요"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
